[project]
name = "mahdi"
version = "0.1.0"
description = "KOSPI200 옵션 자동/수동 하이브리드 트레이딩 시스템 — Phase 1: 관측 인프라"
requires-python = ">=3.12"
dependencies = [
    "hmmlearn>=0.3.2",
    "vollib>=1.0.11",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "websockets>=13.0",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "streamlit>=1.38",
    "plotly>=5.24",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mahdi"]
